--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <footer class="footer-social">
 
         <div class="social-wrapper">
-            <a href="https://github.com/andreymsdev" target="_blank" class="social-link">
+            <a href="https://github.com/andreymsdev/NetTracer-Network-Diagnostic-Tool" target="_blank" class="social-link">
                 <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="social-icon">
             </a>
 
